# rating-b

./: .dockerignore  .env.example  .env.test  .git-blame-ignore-revs  .gitignore  Dockerfile  README  README.md  api_util.py  crontab  db_tools.py  fly.toml  main.py  manage.py  players.py  pyproject.toml  requirements.txt  teams.py  test.py  tools.py  tools_test.py  tournament.py  util.py
.github/: dependabot.yml
.github/workflows/: all_releases.yml  all_releases_manual.yml  last_release_manual.yml  past_month_releases.yml  tests.yml
b/: apps.py  models.py  schema.sql
b/management/commands/: calc_all_releases.py  calc_release.py  import_release.py
dj/: asgi.py  settings.py  urls.py  wsgi.py
dj/b/: models.py
dj/dj/: settings.py  urls.py
egor/: .gitignore  players.py  teams.py  tools.py  tournament.py
fullminus/: apps.py  models.py  schema.sql
fullminus/management/commands/: import_release.py
scripts/: api_util.py  changes.py  constants.py  db_tools.py  main.py  players.py  roster_continuity.py  teams.py  tools.py  tools_test.py  tournament.py
tests/: test_missing_rosters_adjustment.py  test_release.py  test_roster_continuity.py  test_tools.py  trim.sql
