[tool.poetry]
name = "rating-b"
version = "0.1.0"
description = ""
authors = ["MAII <it@maii.li>"]
license = "GNU AGPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.0"
asgiref = "3.7.2"
black = "24.4.2"
django = "5.0.7"
pandas = "2.2.2"
psycopg2-binary = "2.9.9"
psycopg2-pool = "1.2"
python-dateutil = "2.8.2"
pytz = "2024.1"
six = "1.16.0"
sqlparse = "0.5.0"
python-dotenv = "1.0.1"
mmh3 = "4.1.0"
numpy = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
