[tool.poetry]
name = "rating-b"
version = "0.1.0"
description = ""
authors = ["MAII <it@maii.li>"]
license = "GNU AGPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.0"
asgiref = "3.8.1"
black = "24.8.0"
django = "5.1.3"
pandas = "2.2.2"
psycopg2-binary = "2.9.9"
psycopg2-pool = "1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
six = "1.16.0"
sqlparse = "0.5.1"
python-dotenv = "1.0.1"
mmh3 = "5.0.1"
numpy = "2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
